# 3d_map_server

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: logs.conf  params.yaml  params_generator_cfg.yaml
datasets/: octovis
design/: class_diagram.puml
diagrams/: class_diagram.puml
include/octomap_tools/: conversions.h  feature_cloud.h  features_matching.h  icp.h  maps_integrator.h  maps_integrator_node.h  maps_integrator_visualizer.h  math.h  octomap_io.h  octomap_tools.h  octomaps_integrator_ros.h  pointcloud_utils.h  sample_consensus.h  spiral_generator.h  template_alignment.h  thread_pool.h  transformations.h  types.h  types_conversions.h  utils.h
launch/: merge_maps.launch  octomap_tools.launch
octomaps_dataset/fr_079_t1/: model.ot  scene.ot
octomaps_dataset/pwr_d20_f5_m1/: info
octomaps_dataset/pwr_d20_f5_m2/: info  pwr_d20_f5_m2.pgm  pwr_d20_f5_m2.yaml
octomaps_dataset/pwr_d20_f5_m3/: 2019-08-22-13-46-40.pgm  2019-08-22-13-46-40.yaml  info
octomaps_dataset/pwr_d20_f5_m4/: info  pwr_d20_f5_m4.pgm  pwr_d20_f5_m4.yaml
scripts/: msg_from_bag.py  params_generator.py  rename_frame_in_tf_bag.py  tests.py
src/: OctomapMerger.cpp  OctomapMerger.hh  OctreeNearestNeighbours.cpp  OctreeUtils.cpp  OctreeUtils.hh  conversions.h  correspondence_grouping_old.h  feature_cloud.cpp  feature_cloud.h  features_matching.cpp  features_matching.h  features_matching_visualizer.cpp  features_matching_visualizer.h  icp.h  main.cpp  maps_integrator.cpp  maps_integrator_node.cpp  maps_integrator_visualizer.cpp  math.h  model_decomposition.h  ndt_alignment.h  octomap_integrator.cpp  octomap_integrator.h  octomap_merge.cpp  octomap_merger.cpp  octomap_merger.h  octomap_tools.cpp  octomap_tools_node.cpp  octree2pointcloud.cpp  octree_icp.cpp  octree_icp.h  octree_nearest_neighbours.cpp  octree_nearest_neighbours.h  octree_splitter.cpp  octree_transformations.cpp  octree_transformations.h  octree_utils.h  pointcloud2octree.cpp  pointcloud_info.cpp  pointcloud_splitter.cpp  (+9 more)
src/alignment/: alignment_method.h  alignment_validator.h  features_matching.cpp  features_matching.h  global_alignment.h  icp.h  ndt_alignment.h
src/alignment/feature_matching/: feature_cloud.cpp  feature_cloud.h  geometry_clustering_alignment.h  hough_3d_clustering_alignment.h  kdtree_svd_alignment.h  sample_consensus_alignment.h
src/common/: conversions.h  transformations.cpp  transformations.h
src/demos/: correspondence_grouping.cpp
src/feature_matching/: alignment_method.h  feature_cloud.cpp  feature_cloud.h  geometry_clustering_alignment.h  hough_3d_clustering_alignment.h  kdtree_svd_alignment.h  sample_consensus_alignment.h
src/standalone_tools/: map_box_filter.cpp  octomap_info.cpp  octomap_statistical_filter.cpp  octomap_visualizer.cpp  radius_outlier_removal.cpp  transform_octomap.cpp
src/tools/: find_octrees_tf.cpp  map_box_filter.cpp  octomap_box_filter.cpp  octomap_info.cpp  octomap_merge.cpp  octomap_statistical_filter.cpp  octomap_visualizer.cpp  octree2pointcloud.cpp  octree_splitter.cpp  pointcloud2octree.cpp  pointcloud_info.cpp  pointcloud_splitter.cpp  radius_outlier_removal.cpp  transform_octomap.cpp
src/utils/: Logger.hh  OctreeUtils.cpp  OctreeUtils.hh  PointcloudUtils.h  logger.h  math.h  octree_utils.cpp  octree_utils.h  pointcloud_utils.h  spiral_generator.h  table_printer.h  types_conversions.h
table_printer/: CMakeLists.txt
table_printer/src/: TablePrinter.hh
test/: CMakeLists.txt  CMakeLists.txt.in  OctomapMergerTest.cpp  OctreeNearestNeighboursTest.cpp  OctreeUtilsTest.cpp  UtilsTest.cpp  conversions_test.cpp  correspondence_grouping_test.cpp  feature_cloud_test.cpp  features_matching_test.cpp  icp_matching_test.cpp  integration_test.cpp  maps_integrator_test.cpp  octomap_integrator_test.cpp  octomap_merger_test.cpp  octomaps_integrator.test  octomaps_integrator_test.cpp  octree_icp_test.cpp  octree_nearest_neighbours_test.cpp  octree_transformations_test.cpp  octree_utils_test.cpp  performance_test.cpp  pointcloud_transformations_test.cpp  test_utils.h  thread_pool_test.cpp  transformations_test.cpp  utils_test.cpp
