<package format="2">
  <name>octomap_tools</name>
  <version>1.0.0</version>
  <description>The package contains tools to process octomaps.</description>
  <author>Michał Drwięga</author>
  <maintainer email="drwiega.michal@gmail.com">Michał Drwięga</maintainer>
  <license>BSD</license>
  <url type="website">http://www.mdrwiega.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rosunit</test_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>sensor_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen</depend>

</package>
